Fixed share menu mobile vs desktop. Fixed side menu too wide style.

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -68,6 +68,8 @@
 .admin-sidebar-container {
     border: 3px solid #2a97aa85;
     border-radius: 0 0 10px 10px;
+    width: 194px;
+    margin-left: -10px;
 }
 
 .admin-verse {
